--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Codingpeer</title>
+	<!-- <link rel="icon" href="%PUBLIC_URL%/icon.png" /> -->
+  <title>Codingpeer | Find your coding partner</title>
 </head>
 
 <body>
